--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <title>Webpack 2 Demo</title>
 </head>
 <body>
-test
+first edit in textastic on ipad pro
   <script src="/assets/bundle.js"></script>
 </body>
 </html>
