--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<html>
+<!DOCTYPE html>
 
+<html>
+<head>
+    <title>CV Thomas MacLean</title>
+    <link rel="stylesheet" href="./src/styles.css">
+</head>
 <body>
 
 test test hello test
