--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
+<header>
+    CV Thomas MacLean
+</header>
 
-test test hello test
+<div>
+    Contact
+</div>
+
 </body>
 </html>
