--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>CV Thomas MacLean</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Roboto+Mono:400|Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
@@ -10,7 +11,7 @@
     CV Thomas MacLean
 </header>
 
-<div>
+<div class="content">
     Contact
 </div>
 
