--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </header>
 
 <div class="content">
-    Contact
+    <span class="title">
+            Work Experience
+    </span>
+    <ul>
+        <li></li>
+    </ul>
 </div>
 
 </body>
