--- a/index.html
+++ b/index.html
@@ -1,24 +1,79 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
     <title>CV Thomas MacLean</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Roboto+Mono:400|Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./src/styles.css">
 </head>
-<body>
-<header>
-    CV Thomas MacLean
-</header>
 
-<div class="content">
-    <span class="title">
-            Work Experience
-    </span>
-    <ul>
-        <li></li>
-    </ul>
-</div>
+<body>
+    <header>
+        CV Thomas MacLean
+    </header>
+
+    <div class="content">
+        <span class="title">
+            Werkervaring
+        </span>
+        <ul>
+            <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">2016-2017 Cevi</p>
+                    <p class="discription">Software developer</p>
+                </div>
+            </li>
+            <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">2015-2016 Optima</p>
+                    <p class="discription">Software developer</p>
+                </div>
+            </li>
+            <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">2014-2015 Optima</p>
+                    <p class="discription">Marketing Database-medewerker</p>
+                </div>
+            </li>
+            <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">2012-2013 Record Bank</p>
+                    <p class="discription">UBO-regul/Customer-identification</p>
+                </div>
+            </li>
+        </ul>
+
+
+
+        <span class="title">
+            Opleiding
+        </span>
+        <ul>
+            <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">Universiteit Gent</p>
+                    <p class="discription">Master in de Algemene Economie</p>
+                </div>
+            </li>
+            <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">Universiteit Gent</p>
+                    <p class="discription">Bachelor in de Fysica en Sterrenkunde</p>
+                </div>
+            </li>
+            <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">Heilig Hart College Tervuren</p>
+                    <p class="discription">Wetenschappen-Wiskunde</p>
+                </div>
+            </li>
+
+        </ul>
+
+    </div>
+
 
 </body>
+
 </html>
