--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <title>CV Thomas MacLean</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Roboto+Mono:400|Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./src/styles.css">
+    <link rel="stylesheet" href="./src/styless.css">
 </head>
 
 <body>
@@ -48,6 +48,31 @@
 
         <span class="title">
             Opleiding
+        </span>
+        <ul>
+            <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">Universiteit Gent</p>
+                    <p class="discription">Master in de Algemene Economie</p>
+                </div>
+            </li>
+            <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">Universiteit Gent</p>
+                    <p class="discription">Bachelor in de Fysica en Sterrenkunde</p>
+                </div>
+            </li>
+            <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">Heilig Hart College Tervuren</p>
+                    <p class="discription">Wetenschappen-Wiskunde</p>
+                </div>
+            </li>
+
+        </ul>
+
+        <span class="title">
+            Vaardigheden
         </span>
         <ul>
             <li>
