--- a/index.html
+++ b/index.html
@@ -22,24 +22,30 @@
                 <div class="bedrijf-wrap">
                     <p class="bedrijf">2016-2017 Cevi</p>
                     <p class="discription">Software developer</p>
+                    <div class="uitleg">Verschillende webapplicaties, C# backend, SQL en EntityFramework, angularJS en angular4, bootstrap </div>
                 </div>
             </li>
             <li>
                 <div class="bedrijf-wrap">
                     <p class="bedrijf">2015-2016 Optima</p>
                     <p class="discription">Software developer</p>
+                    <div class="uitleg">C# WPF MVVM-C klantendataprogramma mee helpen uitbouwen naar de noden en wensen van de eindgebruikers,
+                        oa: API met CRM en invoices, rapporteringstabel voor Compliance en Competence</div>
                 </div>
             </li>
             <li>
                 <div class="bedrijf-wrap">
                     <p class="bedrijf">2014-2015 Optima</p>
                     <p class="discription">Marketing Database-medewerker</p>
+                    <div class="uitleg">Inhouse ontwikkelaar MS CRM dynamics, forecastsysteem opgezet, verwerkingstijd nieuwe in- schrijvingen
+                        gedecimeerd, door combinatie VBA/SQL/SSIS zeer veel taken kunnen automatiseren</div>
                 </div>
             </li>
             <li>
                 <div class="bedrijf-wrap">
                     <p class="bedrijf">2012-2013 Record Bank</p>
                     <p class="discription">UBO-regul/Customer-identification</p>
+                    <div class="uitleg">Eerste stapjes met VBScript en VBA</div>
                 </div>
             </li>
         </ul>
@@ -75,24 +81,10 @@
             Vaardigheden
         </span>
         <ul>
-            <li>
-                <div class="bedrijf-wrap">
-                    <p class="bedrijf">Universiteit Gent</p>
-                    <p class="discription">Master in de Algemene Economie</p>
-                </div>
-            </li>
-            <li>
-                <div class="bedrijf-wrap">
-                    <p class="bedrijf">Universiteit Gent</p>
-                    <p class="discription">Bachelor in de Fysica en Sterrenkunde</p>
-                </div>
-            </li>
-            <li>
-                <div class="bedrijf-wrap">
-                    <p class="bedrijf">Heilig Hart College Tervuren</p>
-                    <p class="discription">Wetenschappen-Wiskunde</p>
-                </div>
-            </li>
+            <li>Engels, Nederlands, Frans</li>
+            <li>Git, Svn</li>
+            <li> MEAN stack: MongoDb + mongoose + angular + node.js</li>
+            <li>Firebase applicaties: FirebaseDb + vue.js + cloud functions</li>
 
         </ul>
 
