vaardigheden en hobby

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 
 <body>
     <header>
-        CV Thomas MacLean
+        <div class="head-wrap">
+
+            CV Thomas MacLean
+            <p class="email">thomas.maclean@gmail.com</p>
+        </div>
+        <!-- <i class="material-icons">contact_mail</i> -->
     </header>
 
     <div class="content">
@@ -22,7 +27,8 @@
                 <div class="bedrijf-wrap">
                     <p class="bedrijf">2016-2017 Cevi</p>
                     <p class="discription">Software developer</p>
-                    <div class="uitleg">Verschillende webapplicaties, C# backend, SQL en EntityFramework, angularJS en angular4, bootstrap </div>
+                    <div class="uitleg">Verschillende webapplicaties, o.a. digitaal ondertekenplatform, consultatietool voor budgetten en bestelaanvragen,
+                        mobiele zorg app. C# backend, SQL en EntityFramework, angularJS en angular4, bootstrap </div>
                 </div>
             </li>
             <li>
@@ -60,12 +66,16 @@
                 <div class="bedrijf-wrap">
                     <p class="bedrijf">Universiteit Gent</p>
                     <p class="discription">Master in de Algemene Economie</p>
+                    <div class="uitleg">
+                        Masterthesis: Alternatieve en complementaire geldstromen
+                    </div>
                 </div>
             </li>
             <li>
                 <div class="bedrijf-wrap">
                     <p class="bedrijf">Universiteit Gent</p>
                     <p class="discription">Bachelor in de Fysica en Sterrenkunde</p>
+                    <div class="uitleg">Bachelorproject: De Anorthoscoop van Plateau</div>
                 </div>
             </li>
             <li>
@@ -80,12 +90,33 @@
         <span class="title">
             Vaardigheden
         </span>
-        <ul>
-            <li>Engels, Nederlands, Frans</li>
-            <li>Git, Svn</li>
-            <li> MEAN stack: MongoDb + mongoose + angular + node.js</li>
-            <li>Firebase applicaties: FirebaseDb + vue.js + cloud functions</li>
 
+        <div class="kwart-wrap">
+
+            <div class="kwart">Engels</div>
+            <div class="kwart">Frans</div>
+            <div class="kwart">Nederlands</div>
+            <div class="kwart">Git/SVN</div>
+
+            <div class="kwart">PWA</div>
+            <div class="kwart">Node.js/NPM</div>
+            <div class="kwart">Jasmin/Karma</div>
+            <div class="kwart">CSS animations</div>
+
+            <div class="kwart">Firebase</div>
+            <div class="kwart">Vue.js</div>
+            <div class="kwart">Office.js</div>
+            <div class="kwart">Travis CI</div>
+        </div>
+
+
+        <span class="title">
+            Hobby's en interesses
+        </span>
+        <ul>
+            <li class="hobby">Cultuur: Literatuur, schilderkunst, muziek</li>
+            <li class="hobby">Op recreatief niveau schaken</li>
+            <li class="hobby">Met mijn hond lange wandelingen maken</li>
         </ul>
 
     </div>
