--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="bedrijf-wrap">
                     <p class="bedrijf">2016-2017 Cevi</p>
                     <p class="discription">Software developer</p>
-                    <div class="uitleg">Verschillende webapplicaties, o.a. digitaal ondertekenplatform, consultatietool voor budgetten en bestelaanvragen,
+                    <div class="uitleg">Verschillende webapplicaties, oa digitaal ondertekenplatform, consultatietool voor budgetten en bestelaanvragen,
                         mobiele zorg app. C# backend, SQL en EntityFramework, angularJS en angular4, bootstrap </div>
                 </div>
             </li>
