--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CV Thomas MacLean</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Roboto+Mono:400|Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./src/styless.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
