--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
             <div class="kwart">Node.js/NPM</div>
             <div class="kwart">Jasmin/Karma</div>
             <div class="kwart">CSS animations</div>
+            <div class="kwart">Angular.js</div>
+            <div class="kwart">React</div>
+            <div class="kwart">Angular5</div>
+            <div class="kwart">mongoDB</div>
 
             <div class="kwart">Firebase</div>
             <div class="kwart">Vue.js</div>
