--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
 
             <div class="kwart">PWA</div>
             <div class="kwart">Node.js/NPM</div>
-            <div class="kwart">Jasmin/Karma</div>
+            <div class="kwart">Jasmin/Karma/Jest</div>
             <div class="kwart">CSS animations</div>
             <div class="kwart">Angular.js</div>
-            <div class="kwart">React</div>
+            <div class="kwart">React/Redux</div>
             <div class="kwart">Angular5</div>
             <div class="kwart">mongoDB</div>
 
             <div class="kwart">Firebase</div>
-            <div class="kwart">Vue.js</div>
+            <div class="kwart">Vue.js/Vuex</div>
             <div class="kwart">Office.js</div>
             <div class="kwart">Travis CI</div>
         </div>
