--- a/index.html
+++ b/index.html
@@ -103,15 +103,21 @@
             <div class="kwart">Node.js/NPM</div>
             <div class="kwart">Jasmin/Karma/Jest</div>
             <div class="kwart">CSS animations</div>
+
             <div class="kwart">Angular.js</div>
             <div class="kwart">React/Redux</div>
             <div class="kwart">Angular5</div>
             <div class="kwart">mongoDB</div>
 
+            <div class="kwart">AWS</div>
+            <div class="kwart">express</div>
+            <div class="kwart">C#</div>
+            <div class="kwart">Typescript</div>
+
             <div class="kwart">Firebase</div>
             <div class="kwart">Vue.js/Vuex</div>
             <div class="kwart">Office.js</div>
-            <div class="kwart">Travis CI</div>
+            <div class="kwart">CI/CD</div>
         </div>
 
 
