--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
             <div class="kwart">Angular5</div>
             <div class="kwart">mongoDB</div>
 
-            <div class="kwart">AWS</div>
+            <div class="kwart">Webpack/Babel</div>
             <div class="kwart">express</div>
             <div class="kwart">C#</div>
             <div class="kwart">Typescript</div>
 
-            <div class="kwart">Firebase</div>
+            <div class="kwart">Firebase/AWS</div>
             <div class="kwart">Vue.js/Vuex</div>
             <div class="kwart">Office.js</div>
             <div class="kwart">CI/CD</div>
