--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
             <div class="kwart">Angular.js</div>
             <div class="kwart">React/Redux</div>
             <div class="kwart">Angular5</div>
-            <div class="kwart">mongoDB</div>
+            <div class="kwart">MongoDB</div>
 
             <div class="kwart">Webpack/Babel</div>
-            <div class="kwart">express</div>
+            <div class="kwart">Express</div>
             <div class="kwart">C#</div>
             <div class="kwart">Typescript</div>
 
