--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>CV Thomas MacLean</title>
+    <title>CV Thomas MacLeann</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Roboto+Mono:400|Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./src/styless.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
