--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <!-- <i class="material-icons">contact_mail</i> -->
     </header>
-
     <div class="content">
+        <!-- <button id="dwnbtn">💾</button> -->
         <span class="title">
             Werkervaring
         </span>
@@ -94,10 +94,10 @@
 
         <div class="kwart-wrap">
 
-            <div class="kwart">Engels</div>
-            <div class="kwart">Frans</div>
-            <div class="kwart">Nederlands</div>
-            <div class="kwart">Git/SVN</div>
+            <span class="kwart">Engels</span>
+            <span class="kwart">Frans</span>
+            <span class="kwart">Nederlands</span>
+            <span class="kwart">Git/SVN</span>
 
             <div class="kwart">PWA</div>
             <div class="kwart">Node.js/NPM</div>
@@ -138,7 +138,7 @@
     <script>
         window.dataLayer = window.dataLayer || [];
 
-        
+
         function gtag() {
             dataLayer.push(arguments);
         }
@@ -146,6 +146,7 @@
 
         gtag('config', 'UA-110018468-2');
     </script>
+    <script src="src/script.js"></script>
 </body>
 
 </html>
