--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CV Thomas MacLean</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Roboto+Mono:400|Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./src/styless.css">
+    <link rel="shortcut icon" href="./src/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -19,7 +20,9 @@
         <!-- <i class="material-icons">contact_mail</i> -->
     </header>
     <div class="content">
-        <!-- <button id="dwnbtn">💾</button> -->
+        <div id="dwnbtn">
+            <img src="src/download.svg" alt="">
+        </div>
         <span class="title">
             Werkervaring
         </span>
