--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <body>
     <header>
         <div class="head-wrap">
-
             CV Thomas MacLean
-            <p class="email">thomas.maclean@gmail.com</p>
+            <p class="email">
+                <a href="mailto:cv@thomasmaclean.be">cv@thomasmaclean.be</a>
+            </p>
         </div>
         <!-- <i class="material-icons">contact_mail</i> -->
     </header>
