--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             Werkervaring
         </span>
         <ul>
+               <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">2020-... Bothrs</p>
+                    <p class="discription">Fullstack javascript developer/Shopify developer</p>
+                    <div class="uitleg">Building fullstack javascript application, react native, headless e-commerce stores</div>
+                </div>
+            </li>
+               <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">2018-2019 Marlon</p>
+                    <p class="discription">Fullstack javascript developer</p>
+                    <div class="uitleg">React/node fullstack applications</div>
+                </div>
+            </li>
             <li>
                 <div class="bedrijf-wrap">
                     <p class="bedrijf">2016-2018 Cevi</p>
