--- a/index.html
+++ b/index.html
@@ -28,18 +28,25 @@
             Werkervaring
         </span>
         <ul>
+              <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">2022-... Antenna</p>
+                    <p class="discription">Fullstack javascript developer</p>
+                    <div class="uitleg">Vélo-Veilig-Vlaanderen kaart. Molecubes-app.</div>
+                </div>
+            </li>
                <li>
                 <div class="bedrijf-wrap">
-                    <p class="bedrijf">2020-... Bothrs</p>
+                    <p class="bedrijf">2020-2021 Bothrs</p>
                     <p class="discription">Fullstack javascript developer/Shopify developer</p>
-                    <div class="uitleg">Building fullstack javascript application, react native, headless e-commerce stores</div>
+                    <div class="uitleg">Fullstack javascript application, react native, headless e-commerce stores</div>
                 </div>
             </li>
                <li>
                 <div class="bedrijf-wrap">
                     <p class="bedrijf">2018-2019 Marlon</p>
                     <p class="discription">Fullstack javascript developer</p>
-                    <div class="uitleg">React/node fullstack applications</div>
+                    <div class="uitleg">React/node fullstack applications. Car configurator voor Toyota Europe</div>
                 </div>
             </li>
             <li>
@@ -47,7 +54,7 @@
                     <p class="bedrijf">2016-2018 Cevi</p>
                     <p class="discription">Software developer</p>
                     <div class="uitleg">Verschillende webapplicaties, oa digitaal ondertekenplatform, consultatietool voor budgetten en bestelaanvragen,
-                        mobiele zorg app. C# backend, SQL en EntityFramework, angularJS en angular4, bootstrap</div>
+                        mobiele zorg app.</div>
                 </div>
             </li>
             <li>
@@ -66,13 +73,7 @@
                         gedecimeerd, door combinatie VBA/SQL/SSIS zeer veel taken kunnen automatiseren</div>
                 </div>
             </li>
-            <li>
-                <div class="bedrijf-wrap">
-                    <p class="bedrijf">2012-2013 Record Bank</p>
-                    <p class="discription">UBO-regul/Customer-identification</p>
-                    <div class="uitleg">Eerste stapjes met VBScript en VBA</div>
-                </div>
-            </li>
+         
         </ul>
 
 
@@ -115,39 +116,20 @@
             <span class="kwart">Engels</span>
             <span class="kwart">Frans</span>
             <span class="kwart">Nederlands</span>
-            <span class="kwart">Git/SVN</span>
-
-            <div class="kwart">PWA</div>
-            <div class="kwart">Node.js/NPM</div>
-            <div class="kwart">Jasmin/Karma/Jest</div>
+            <div class="kwart">Fullstack Javascript</div>
+            <div class="kwart">Electron</div>
+            <div class="kwart">React/vue</div>
             <div class="kwart">CSS animations</div>
+            <div class="kwart">PWA</div>
 
-            <div class="kwart">Angular.js</div>
-            <div class="kwart">React/Redux</div>
-            <div class="kwart">Angular5</div>
-            <div class="kwart">MongoDB</div>
+   
 
-            <div class="kwart">Webpack/Babel</div>
-            <div class="kwart">Express</div>
-            <div class="kwart">C#</div>
-            <div class="kwart">Typescript</div>
-
-            <div class="kwart">Firebase/AWS</div>
-            <div class="kwart">Vue.js/Vuex</div>
-            <div class="kwart">Office.js</div>
-            <div class="kwart">CI/CD</div>
+ 
+ 
         </div>
 
 
-        <span class="title">
-            Hobby's en interesses
-        </span>
-        <ul>
-            <li class="hobby">Cultuur: Literatuur, schilderkunst, muziek</li>
-            <li class="hobby">Op recreatief niveau schaken</li>
-            <li class="hobby">Met mijn hond lange wandelingen maken</li>
-        </ul>
-
+       
     </div>
 
 
