--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="head-wrap">
             CV Thomas MacLean
             <p class="email">
-                <a href="mailto:cv@thomasmaclean.be">cv@thomasmaclean.be</a>
+                <a href="mailto:hello@thomasmaclean.be">hello@thomasmaclean.be</a>
             </p>
         </div>
         <!-- <i class="material-icons">contact_mail</i> -->
