--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
             Werkervaring
         </span>
         <ul>
+                  <li>
+                <div class="bedrijf-wrap">
+                    <p class="bedrijf">2020-... MacLean Informatics</p>
+                    <p class="discription">Freelance fullstack developer/Shopify expert</p>
+                    <div class="uitleg">Nonadrinks, Pommelien Thijs, Lectrr, ...</div>
+                </div>
+            </li>
               <li>
                 <div class="bedrijf-wrap">
-                    <p class="bedrijf">2022-... Antenna</p>
+                    <p class="bedrijf">2022-2024 Antenna</p>
                     <p class="discription">Fullstack javascript developer</p>
                     <div class="uitleg">Vélo-Veilig-Vlaanderen kaart. Molecubes-app.</div>
                 </div>
@@ -120,7 +127,7 @@
             <div class="kwart">Electron</div>
             <div class="kwart">React/vue</div>
             <div class="kwart">CSS animations</div>
-            <div class="kwart">PWA</div>
+            <div class="kwart">Shopify</div>
 
    
 
@@ -132,20 +139,6 @@
        
     </div>
 
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110018468-2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-110018468-2');
-    </script>
     <script src="src/script.js"></script>
 </body>
 
